# JunoSync

./: CMakeLists.txt  LICENSE.md  conanfile.txt
apps/: CMakeLists.txt  config.cpp  config.hpp  junosync.cpp  registry.cpp  registry.hpp  stringutils.cpp  stringutils.hpp
docs/: CMakeLists.txt  main.md
include/JunoSync/: config.hpp
src/: CMakeLists.txt  config.cpp
